fix: popup z-index. delete function hideErrors in closePopup

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -10,7 +10,7 @@
   right: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.5);
-  z-index: 2;
+  z-index: -1;
   box-sizing: border-box;
   font-family: 'Inter', sans-serif;
   transition: opacity 0.3s ease-in-out;
